--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>BtWeb2</title>
+    <title>BT Web 2.0</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon-32x32.png" type="image/png">
 
     {{content-for "head"}}
 
