--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      if(location.protocol === "http:" && location.hostname !== "localhost") {
+        // not building locally?  off we go to https-world
+        location.href = location.href.replace('http://', 'https://');
+      }
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BT Web 2.0</title>
