--- a/app/index.html
+++ b/app/index.html
@@ -28,5 +28,10 @@
     <script src="{{rootURL}}assets/bt-web2.js"></script>
 
     {{content-for "body-footer"}}
+
+    <script>
+    
+      $(document).on('keyup keydown', function(e){window.shifted = e.shiftKey} );
+    </script>
   </body>
 </html>
