Simplifying user dashboard drastically

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,6 @@
     <script src="{{rootURL}}assets/bt-web2.js"></script>
 
     {{content-for "body-footer"}}
-
     <script>
     
       $(document).on('keyup keydown', function(e){window.shifted = e.shiftKey} );
@@ -71,5 +70,6 @@
         console.log(joined);
       }
     </script>
+    <script src="https://kit.fontawesome.com/d8b18df8ff.js" crossorigin="anonymous"></script>
   </body>
 </html>
