--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/bt-web2.css">
+    <script src="{{rootURL}}assets/gifler.min.js"></script>
 
     {{content-for "head-footer"}}
   </head>
