--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    <script src="https://cdn.jsdelivr.net/npm/geolib@3.3.1/lib/index.min.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/bt-web2.js"></script>
 
